--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,18 @@ confection==0.1.3
 contourpy==1.1.1
 cycler==0.11.0
 cymem==2.0.8
+de-dep-news-trf @ https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.6.1/de_dep_news_trf-3.6.1-py3-none-any.whl#sha256=e7a018eb23ae715bbb44ae42f533d31a8f5083c13762899ba2d4b7ef424ad5d0
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1-py3-none-any.whl#sha256=f9a1f0ae83954c49ebf92c0f7043ea02de51db59bf6cd3ed849d46928612c806
 executing==1.2.0
 fastjsonschema==2.18.0
+filelock==3.12.4
 fonttools==4.42.1
 fqdn==1.5.1
+fsspec==2023.9.1
+huggingface-hub==0.17.2
 idna==3.4
 ipykernel==6.25.2
 ipython==8.15.0
@@ -51,15 +56,18 @@ jupyterlab-pygments==0.2.2
 jupyterlab_server==2.25.0
 kiwisolver==1.4.5
 langcodes==3.3.0
+MarkdownSlides @ git+https://gitlab.com/da_doomer/markdown-slides.git@fd27dd09cf90f00093a393338e08953c8d65d68e
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mistune==3.0.1
+mpmath==1.3.0
 murmurhash==1.0.10
 nbclient==0.8.0
 nbconvert==7.8.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
+networkx==3.1
 nltk==3.8.1
 notebook==7.0.4
 notebook_shim==0.2.3
@@ -96,22 +104,32 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.3
+safetensors==0.3.3
 Send2Trash==1.8.2
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
 spacy==3.6.1
+spacy-alignments==0.9.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+spacy-lookups-data==1.0.5
+spacy-transformers==1.2.5
 srsly==2.4.8
 stack-data==0.6.2
+svgling==0.3.1
+svgwrite==1.4.3
+sympy==1.12
 terminado==0.17.1
 thinc==8.1.12
 tinycss2==1.2.1
+tokenizers==0.13.3
+torch==2.0.1
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.10.0
+transformers==4.30.2
 typer==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
