--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ jupyterlab_server==2.25.0
 kiwisolver==1.4.5
 langcodes==3.3.0
 lit==16.0.6
+MarkdownSlides @ git+https://gitlab.com/da_doomer/markdown-slides.git@fd27dd09cf90f00093a393338e08953c8d65d68e
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
