--- a/requirements.txt
+++ b/requirements.txt
@@ -120,8 +120,11 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.3
 safetensors==0.3.3
+scikit-learn==1.3.1
+scipy==1.11.3
 Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0.post10
 smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -140,6 +143,7 @@ terminado==0.17.1
 textblob==0.17.1
 textsearch==0.0.24
 thinc==8.1.12
+threadpoolctl==3.2.0
 tinycss2==1.2.1
 tokenizers==0.13.3
 torch==2.0.1
