Finalize text classification

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ de-dep-news-trf @ https://github.com/explosion/spacy-models/releases/download/de
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
 en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1-py3-none-any.whl#sha256=f9a1f0ae83954c49ebf92c0f7043ea02de51db59bf6cd3ed849d46928612c806
 executing==1.2.0
 fastjsonschema==2.18.0
