--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 annotated-types==0.5.0
 anyascii==0.3.2
 anyio==4.0.0
@@ -5,6 +6,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.4.0
+astunparse==1.6.3
 async-lru==2.0.4
 attrs==23.1.0
 Babel==2.12.1
@@ -12,6 +14,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
 blis==0.7.11
+cachetools==5.3.2
 catalogue==2.0.9
 certifi==2023.7.22
 cffi==1.15.1
@@ -21,8 +24,10 @@ cmake==3.27.5
 comm==0.1.4
 confection==0.1.3
 contourpy==1.1.1
+contractions==0.1.73
 cycler==0.11.0
 cymem==2.0.8
+Cython==3.0.5
 de-dep-news-trf @ https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.6.1/de_dep_news_trf-3.6.1-py3-none-any.whl#sha256=e7a018eb23ae715bbb44ae42f533d31a8f5083c13762899ba2d4b7ef424ad5d0
 debugpy==1.8.0
 decorator==5.1.1
@@ -32,9 +37,17 @@ en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en
 executing==1.2.0
 fastjsonschema==2.18.0
 filelock==3.12.4
+flatbuffers==23.5.26
 fonttools==4.42.1
 fqdn==1.5.1
 fsspec==2023.9.2
+gast==0.5.4
+gensim==4.3.2
+google-auth==2.23.4
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.59.2
+h5py==3.10.0
 huggingface-hub==0.17.2
 idna==3.4
 ipykernel==6.25.2
@@ -56,14 +69,18 @@ jupyter_server_terminals==0.4.4
 jupyterlab==4.0.6
 jupyterlab-pygments==0.2.2
 jupyterlab_server==2.25.0
+keras==2.14.0
 kiwisolver==1.4.5
 langcodes==3.3.0
+libclang==16.0.6
 lit==16.0.6
+Markdown==3.5.1
 MarkdownSlides @ git+https://gitlab.com/da_doomer/markdown-slides.git@fd27dd09cf90f00093a393338e08953c8d65d68e
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mistune==3.0.1
+ml-dtypes==0.2.0
 mpmath==1.3.0
 murmurhash==1.0.10
 nbclient==0.8.0
@@ -86,6 +103,8 @@ nvidia-cusolver-cu11==11.4.0.1
 nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+opt-einsum==3.3.0
 overrides==7.4.0
 packaging==23.1
 pandas==2.1.1
@@ -99,10 +118,13 @@ platformdirs==3.10.0
 preshed==3.0.9
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
+protobuf==4.25.0
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyahocorasick==2.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
@@ -116,14 +138,17 @@ pyzmq==25.1.1
 referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
+requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.3
+rsa==4.9
 safetensors==0.3.3
 scikit-learn==1.3.1
 scipy==1.11.3
 Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0.post10
 smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -138,6 +163,12 @@ stack-data==0.6.2
 svgling==0.3.1
 svgwrite==1.4.3
 sympy==1.12
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.3.0
 terminado==0.17.1
 textblob==0.17.1
 textsearch==0.0.24
@@ -161,3 +192,5 @@ wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.3
+Werkzeug==3.0.1
+wrapt==1.14.1
