Finish word2vec gensim

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
 presentation/
 
+# Big text files
+deu-ch_web-public_2019_1M-sentences.txt
+deu-ch_web-public_2019_1M-sentences_cleaned.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
