--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,14 @@ contractions==0.1.73
 cycler==0.11.0
 cymem==2.0.8
 Cython==3.0.5
+de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.6.0/de_core_news_lg-3.6.0-py3-none-any.whl#sha256=d40c3232a99c36d2bd011e6ef2c4b6a155e6c29590ef047900722466a4d592d9
+de-core-news-md @ https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.6.0/de_core_news_md-3.6.0-py3-none-any.whl#sha256=c289fe1bfcc3e3670f2e0e849e8b8c83ecb83cc70045522a1e06a56b291ed30d
+de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.6.0/de_core_news_sm-3.6.0-py3-none-any.whl#sha256=cdded59f89eacf348c30a79f9a2485ab21e154ef300cc02c7ebe87dea149c457
 de-dep-news-trf @ https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.6.1/de_dep_news_trf-3.6.1-py3-none-any.whl#sha256=e7a018eb23ae715bbb44ae42f533d31a8f5083c13762899ba2d4b7ef424ad5d0
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+diskcache==5.6.3
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
 en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.6.1/en_core_web_trf-3.6.1-py3-none-any.whl#sha256=f9a1f0ae83954c49ebf92c0f7043ea02de51db59bf6cd3ed849d46928612c806
 executing==1.2.0
@@ -74,6 +78,7 @@ kiwisolver==1.4.5
 langcodes==3.3.0
 libclang==16.0.6
 lit==16.0.6
+llama_cpp_python==0.2.18
 Markdown==3.5.1
 MarkdownSlides @ git+https://gitlab.com/da_doomer/markdown-slides.git@fd27dd09cf90f00093a393338e08953c8d65d68e
 MarkupSafe==2.1.3
@@ -130,6 +135,7 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 Pygments==2.16.1
 pyparsing==3.1.1
+python-crfsuite==0.9.9
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
@@ -149,6 +155,7 @@ scipy==1.11.3
 Send2Trash==1.8.2
 six==1.16.0
 sklearn==0.0.post10
+sklearn-crfsuite==0.3.6
 smart-open==6.4.0
 sniffio==1.3.0
 soupsieve==2.5
@@ -163,6 +170,7 @@ stack-data==0.6.2
 svgling==0.3.1
 svgwrite==1.4.3
 sympy==1.12
+tabulate==0.9.0
 tensorboard==2.14.1
 tensorboard-data-server==0.7.2
 tensorflow==2.14.0
